[gd_scene load_steps=8 format=3 uid="uid://k5lqehb26keb"]

[ext_resource type="Texture2D" uid="uid://bcnht1qx4eixu" path="res://Assets/icon.svg" id="1_237bn"]
[ext_resource type="Script" uid="uid://d3rehpj5ds6r" path="res://scripts/notes.gd" id="1_nivom"]
[ext_resource type="Texture2D" uid="uid://da7gwb78g02r0" path="res://Assets/ui/Pape.png" id="2_hv8xd"]
[ext_resource type="Texture2D" uid="uid://cpfk3amstw6uo" path="res://Assets/tiki/tiki1.jpg" id="2_uy50o"]
[ext_resource type="Texture2D" uid="uid://bd1necqholudf" path="res://Assets/carnaval/carnaval1.jpg" id="3_dq583"]
[ext_resource type="Texture2D" uid="uid://yufok0yx246g" path="res://Assets/mexicana/mexicana1.jpg" id="4_dq583"]
[ext_resource type="Texture2D" uid="uid://dbm7e6dw2y6un" path="res://Assets/japon/japon1.jpg" id="4_r6urf"]

[node name="notes" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_nivom")

[node name="Notas" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 240.0
offset_top = 206.0
offset_right = 697.0
offset_bottom = 660.0
texture = ExtResource("2_hv8xd")
expand_mode = 1
stretch_mode = 4

[node name="Tiki" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 335.0
offset_top = 398.0
offset_right = 461.0
offset_bottom = 526.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_uy50o")
expand_mode = 1

[node name="carnaval" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 423.0
offset_top = 480.0
offset_right = 549.0
offset_bottom = 608.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_dq583")
expand_mode = 1

[node name="mexicana" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 555.0
offset_top = 447.0
offset_right = 681.0
offset_bottom = 575.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_dq583")
expand_mode = 1

[node name="Japon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 483.0
offset_top = 329.0
offset_right = 611.0
offset_bottom = 457.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_r6urf")
expand_mode = 1

[node name="Estado1" type="TextureRect" parent="."]
modulate = Color(0, 1, 0.1764706, 1)
layout_mode = 0
offset_left = 409.0
offset_top = 360.0
offset_right = 537.0
offset_bottom = 488.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_237bn")

[node name="Estado2" type="TextureRect" parent="."]
modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_left = 568.0
offset_top = 305.0
offset_right = 696.0
offset_bottom = 433.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_237bn")

[node name="Estado3" type="TextureRect" parent="."]
modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_left = 486.0
offset_top = 464.0
offset_right = 614.0
offset_bottom = 592.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_237bn")

[node name="Estado4" type="TextureRect" parent="."]
modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_left = 624.0
offset_top = 417.0
offset_right = 752.0
offset_bottom = 545.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_237bn")
